# data-metrics

./: .gitignore  Code Excercise.md  Migration Case Study.md  pyproject.toml  run.py  utils.py
src/: app.py  base.py  config.py  db.py  error_handlers.py  exceptions.py  router.py
src/stats/: router.py
src/stats/controllers/: stats_aggregator.py  stats_formula_parser.py
src/stats/models/: stats.py
src/stats/schemas/: sum_stats.py
src/stats/views/: custom_stats.py  sum_stats.py
tests/: conftest.py
tests/stats/controllers/: test_stats_aggregator.py  test_stats_formula_parser.py
tests/stats/models/: test_stats.py
tests/stats/views/: test_custom_stats.py  test_sum_stats.py
